# mxene_interface

./: .gitignore  README.md  environment.yml  pyproject.toml
calcs/: bilayer_relax_pbe  relax_pbe
data/relaxed_units/: Ti2CF2.poscar  Ti2CO2.poscar  Ti3C2.poscar  Ti3C2F2.poscar  Ti3C2O2.poscar  Ti4C3.poscar  Ti4C3F2.poscar  Ti4C3O2.poscar
jobs/cluster/: vasp_gam.slurm  vasp_std.slurm
notebooks/: workspace.ipynb
runs/Ti2C/: INCAR  POSCAR
scripts/: bilayer_relax.py  monolayer_relax.py  test_unit_relaxation.py
src/MXene_bilayer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mxene/analysis/: status.py
src/mxene/compute/: relax.py
src/mxene/constants/: constants.py
src/mxene/io/: incar.py  kpoints.py  outcar.py  output.py  paths.py  poscar.py  potcar.py  setup_log.py  slurm.py
src/mxene/structures/: am_helper_functions.py  bilayer.py  monolayer.py  unit.py
